# spbu-advanced-python

./: .gitignore  README.md  requirements.txt
p_01_modules_packages/: README.md
p_01_modules_packages/solution/: check.py
p_01_modules_packages/solution/textstats/: __init__.py  __main__.py  cli.py  io.py  normalize.py  stats.py
p_01_modules_packages/template/: check.py
p_01_modules_packages/template/data/: sample.txt
p_01_modules_packages/template/textstats/: __main__.py  _monolith.py  normalize.py  stats.py
p_02_classes_state_behavior/: README.md
p_02_classes_state_behavior/solution/: check.py
p_02_classes_state_behavior/template/: check.py
p_03_inheritance_composition/: README.md
p_03_inheritance_composition/solution/: check.py
p_03_inheritance_composition/template/: check.py
p_04_data_models_validation/: README.md
p_04_data_models_validation/solution/: check.py
p_04_data_models_validation/template/: check.py
p_05_functions_objects/: README.md  __init__.py
p_05_functions_objects/solution/: __init__.py  check.py
p_05_functions_objects/template/: __init__.py  check.py
p_06_closures_decorators/: README.md
p_07_iterators_generators_protocols/: README.md  __init__.py
p_07_iterators_generators_protocols/solution/: __init__.py  check.py
p_07_iterators_generators_protocols/template/: __init__.py  check.py
p_08_quality_packaging/: README.md
p_08_quality_packaging/solution/: check.py
p_08_quality_packaging/template/: check.py  pyproject.toml
p_08_quality_packaging/template/src/logtools/: service.py
(+54 files in other folders)
